<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:padding="20dp">


    <EditText
        android:id="@+id/moodInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/how_are_you_feeling_today"
        android:inputType="text"
        android:textSize="18sp"
        android:background="@drawable/edittext_bg"
        android:textColor="@color/primary_text"
        android:textColorHint="#757575"
        android:padding="16dp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/symptomsCheckboxGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/moodInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/symptomTired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_tired"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:id="@+id/symptomRestless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restless_or_anxious"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:id="@+id/symptomStressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_stressed"
            android:textColor="@color/primary_text"/>

        <CheckBox
            android:id="@+id/symptomSad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling_sad_or_down"
            android:textColor="@color/primary_text"/>
    </LinearLayout>


    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_mood"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/symptomsCheckboxGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/moodResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:padding="16dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/modalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_does_this_work"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/moodResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
